Fixed header vertical alignment

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -286,6 +286,12 @@ p.copyright {
   border-width: 0;
 }
 
+.navbar-default .navbar-nav {
+  display: flex;
+  align-items: baseline;
+  padding: 20px 0;
+}
+
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav>li>a {
   color: #ffffff;
@@ -306,7 +312,7 @@ p.copyright {
 }
 
 .nav>li>a {
-  padding: 20px 10px;
+  padding: 0 10px;
   font-size: 13px;
   font-family: 'Merriweather', serif;
   letter-spacing: 0.8px;
@@ -315,7 +321,7 @@ p.copyright {
 
 .nav>li>a.nav-bar-social-link {
   display: inline-block;
-  padding: 20px 8px;
+  padding: 0 8px;
 }
 
 .navbar-brand {
@@ -387,7 +393,21 @@ p.copyright {
   margin-bottom: 15px;
 }
 
+@media(max-width:991px) {
+  .nav>li>a {
+    padding: 0 6px;
+    font-size: 11px;
+  }
+  .nav>li>a.nav-bar-social-link {
+    padding: 0 4px;
+  }
+}
+
 @media(max-width:767px) {
+  .navbar-default .navbar-nav {
+    display: block;
+    padding: 0;
+  }
   .nav>li {
     padding: 10px 20px;
   }
